@@ -11783,6 +11783,43 @@ id|addr
 l_int|4
 )braket
 suffix:semicolon
+multiline_comment|/* If set, this is called immediately after pci_enable_device.&n;&t; * If it returns non-zero, no probing will take place and the&n;&t; * ports will not be used. */
+DECL|member|preinit_hook
+r_int
+(paren
+op_star
+id|preinit_hook
+)paren
+(paren
+r_struct
+id|pci_dev
+op_star
+id|pdev
+comma
+r_int
+id|autoirq
+comma
+r_int
+id|autodma
+)paren
+suffix:semicolon
+multiline_comment|/* If set, this is called after probing for ports.  If &squot;failed&squot;&n;&t; * is non-zero we couldn&squot;t use any of the ports. */
+DECL|member|postinit_hook
+r_void
+(paren
+op_star
+id|postinit_hook
+)paren
+(paren
+r_struct
+id|pci_dev
+op_star
+id|pdev
+comma
+r_int
+id|failed
+)paren
+suffix:semicolon
 DECL|variable|__devinitdata
 )brace
 id|cards
@@ -13729,6 +13766,34 @@ l_int|0
 r_return
 id|err
 suffix:semicolon
+r_if
+c_cond
+(paren
+id|cards
+(braket
+id|i
+)braket
+dot
+id|preinit_hook
+op_logical_and
+id|cards
+(braket
+id|i
+)braket
+dot
+id|preinit_hook
+(paren
+id|dev
+comma
+id|PARPORT_IRQ_NONE
+comma
+id|PARPORT_DMA_NONE
+)paren
+)paren
+r_return
+op_minus
+id|ENODEV
+suffix:semicolon
 r_for
 c_loop
 (paren
@@ -13885,6 +13950,30 @@ id|count
 op_increment
 suffix:semicolon
 )brace
+r_if
+c_cond
+(paren
+id|cards
+(braket
+id|i
+)braket
+dot
+id|postinit_hook
+)paren
+id|cards
+(braket
+id|i
+)braket
+dot
+id|postinit_hook
+(paren
+id|dev
+comma
+id|count
+op_eq
+l_int|0
+)paren
+suffix:semicolon
 r_return
 id|count
 op_eq
